--- a/apps/frontend/src/i18n/locales/ru.json
+++ b/apps/frontend/src/i18n/locales/ru.json
@@ -5,8 +5,9 @@
     "language": "Язык"
   },
   "debate": {
-    "title": "AI Дебаты Голосом",
-    "description": "Тренируйте навыки дебатов с ИИ. Введите тему, запишите свой ответ и получите мгновенную обратную связь по вашей аргументации.",
+    "goToRecord": "Перейти к записи",
+    "topic": "Тема",
+    "process": "Отправить",
     "enterTopic": "Введите тему дебатов",
     "recordResponse": "Записать ответ",
     "stopRecording": "Остановить запись",
@@ -19,6 +20,7 @@
     "improvementsPlaceholder": "Предложения по улучшению появятся здесь...",
     "nextTopic": "Следующая тема дебатов",
     "nextTopicPlaceholder": "Вот еще одна тема, которую вы можете попробовать...",
-    "remaining": "осталось"
+    "remaining": "осталось",
+    "startOver": "Ввести тему вручную"
   }
 }
